Added doctrine migrations bundle to composer.

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "willdurand/hateoas-bundle": "0.5.*"
+        "willdurand/hateoas-bundle": "0.5.*",
+        "doctrine/migrations": "dev-master#efb77c10dfb75485998a843154bbc44d8124c4d1",
+        "doctrine/doctrine-migrations-bundle": "1.0.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
