--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 !app/cache/.gitkeep
 /app/config/parameters.yml
 /app/data/*
-!app/data/database.db3
+!app/data/.gitkeep
 /app/logs/*
 !app/logs/.gitkeep
 /app/phpunit.xml
