Added doctrine-fixtures-bundle to composer.

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "willdurand/hateoas-bundle": "0.5.*",
         "doctrine/migrations": "dev-master#efb77c10dfb75485998a843154bbc44d8124c4d1",
-        "doctrine/doctrine-migrations-bundle": "1.0.*"
+        "doctrine/doctrine-migrations-bundle": "1.0.*",
+        "doctrine/doctrine-fixtures-bundle": "2.2.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
