--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
 api:
-    resource: "@ApiBundle/Resources/config/routing.yml"
-    prefix:   "/api"
+    resource: @ApiBundle/Resources/config/routing.yml
+    prefix:   /api
