--- a/src/ApiBundle/Resources/config/routing.yml
+++ b/src/ApiBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-api:
-    resource: "@ApiBundle/Controller"
-    type:     "annotation"
+api_users_get:
+    path:     /users/
+    methods:  [ GET ]
+    defaults: { _controller: api.controller.users:getUsersAction }
