--- a/src/ApiBundle/Resources/config/routing.yml
+++ b/src/ApiBundle/Resources/config/routing.yml
@@ -1,4 +1,9 @@
-api_users_get:
+api_users_get_one:
+    path:     /users/{user}
+    methods:  [ GET ]
+    defaults: { _controller: api.controller.users:getUserAction }
+
+api_users_get_all:
     path:     /users/
     methods:  [ GET ]
     defaults: { _controller: api.controller.users:getUsersAction }
