--- a/src/ApiBundle/Resources/config/serializer/Representation.CollectionRepresentation.yml
+++ b/src/ApiBundle/Resources/config/serializer/Representation.CollectionRepresentation.yml
@@ -3,7 +3,7 @@ ApiBundle\Representation\CollectionRepresentation:
         -
             rel: self
             href:
-                route: api_users_get_all
+                route: expr(object.getRoute())
     exclusion_policy: ALL
     virtual_properties:
         getResources:
