--- a/src/ApiBundle/Resources/config/services.yml
+++ b/src/ApiBundle/Resources/config/services.yml
@@ -2,6 +2,13 @@ parameters:
     api.controller.users.class: ApiBundle\Controller\UsersController
     api.serializer.json_api.class: ApiBundle\Serializer\JsonApiSerializer
     api.serializer.subscriber.resource_type.class: ApiBundle\Serializer\Subscriber\ResourceTypeSubscriber
+    api.serializer.mapping.resource_types: #TODO: Make resource types configurable.
+        AppBundle\Entity\User: users
+    api.serializer.mapping.links.self:
+        AppBundle\Entity\User:
+            route: api_users_get_one
+            parameters:
+                user: expr(object.getId())
 
 services:
     api.controller.users:
@@ -23,7 +30,6 @@ services:
     api.serializer.subscriber.resource_type:
         class: %api.serializer.subscriber.resource_type.class%
         arguments:
-            -
-                AppBundle\Entity\User: users
+            - %api.serializer.mapping.resource_types%
         tags:
             - { name: jms_serializer.event_subscriber }
