Updated CollectionRepresentation to allow optional route parameters for its self link.

--- a/src/ApiBundle/Resources/config/serializer/Representation.CollectionRepresentation.yml
+++ b/src/ApiBundle/Resources/config/serializer/Representation.CollectionRepresentation.yml
@@ -4,6 +4,7 @@ ApiBundle\Representation\CollectionRepresentation:
             rel: self
             href:
                 route: expr(object.getRoute())
+                parameters: expr(object.getParameters())
     exclusion_policy: ALL
     virtual_properties:
         getResources:
