Added the ability to have a top-level "self" link on resource representations.

--- a/src/ApiBundle/Resources/config/serializer/Representation.ResourceRepresentation.yml
+++ b/src/ApiBundle/Resources/config/serializer/Representation.ResourceRepresentation.yml
@@ -1,4 +1,12 @@
 ApiBundle\Representation\ResourceRepresentation:
+    relations:
+        -
+            rel: self
+            href:
+                route: expr(object.getRoute())
+                parameters: expr(object.getParameters())
+            exclusion:
+                exclude_if: expr(object.hasRoute() === false)
     exclusion_policy: ALL
     virtual_properties:
         getResource:
