Added service definition for the user repository.

--- a/src/AppApiBundle/Resources/config/services.yml
+++ b/src/AppApiBundle/Resources/config/services.yml
@@ -1,8 +1,17 @@
 parameters:
     app.controller.users.class: AppApiBundle\Controller\UsersController
+    app.repository.user.class: AppBundle\Entity\Repository\UserRepository
 
 services:
     app.controller.users:
         class: %app.controller.users.class%
         arguments:
             - @jms_serializer
+            - @app.repository.user
+
+    app.repository.user:
+        class: %app.repository.user.class%
+        factory_service: doctrine.orm.default_entity_manager
+        factory_method: getRepository
+        arguments:
+            - AppBundle:User
