--- a/src/AppApiBundle/Resources/config/serializer/AppBundle/Entity.User.yml
+++ b/src/AppApiBundle/Resources/config/serializer/AppBundle/Entity.User.yml
@@ -1,4 +1,11 @@
 AppBundle\Entity\User:
+    relations:
+        -
+            rel: school
+            href:
+                route: app_users_get_related_school
+                parameters:
+                    user: expr(object.getId())
     exclusion_policy: ALL
     properties:
         id:
